--- a/InvoiceJS/MobInvoice/invoiceself/css/invoice.css
+++ b/InvoiceJS/MobInvoice/invoiceself/css/invoice.css
@@ -121,3 +121,40 @@ em.icon03{background-image:url(../../images/icon03.png);}
 .btn-ff9000{color:#fff;background-color:#ff9000;}
 .input-style{height:26px;line-height:normal;border:1px solid #ddd;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 .select-style{height:26px;padding:0;border:1px solid #ddd;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+
+.invoice-box{height:40px;margin-bottom:20px;border:1px solid #dedede;border-radius:3px;background-color:#fff;}
+.invoice-icon{float:left;width:25px;height:17px;margin:13px 0 0 10px;background:url(../../images/invoice.gif) no-repeat;background-size:20px 17px;}
+.invoice-text{float:left;height:15px;padding:13px 0 12px 0;font-size:15px;color:#666;}
+.invoice-subtext{float:left;height:12px;padding:13px 0 12px 0;font-size:15px;color:#f60;}
+.invoice-other{float:left;height:15px;padding:0px 0px 12px 5px;font-size:15px;color:#666;}
+.invoice-infor{position:relative;margin-bottom:25px;padding-bottom:10px;border:1px solid #dedede;border-radius:3px;background-color:#fff;}
+.invoice-infor dl{line-height:20px;margin:0 20px 0 10px;}
+.invoice-infor{}
+.invoice-infor .arrow-r{position:absolute;right:0px;top:60px;}
+.invoice-infohide{display:none;}
+/***invoice***/
+.mt20{margin-top:20px;}
+.mb15{margin-bottom:15px;}
+.infor-list{}
+.infor-list dt{line-height:24px;font-size:15px;color:#666;}
+.infor-box{position:relative;height:40px;padding:0 10px;border:1px solid #dedede;border-radius:3px;background-color:#fff;}
+
+.invoice-text02,.certificate-num{width:100%;height:30px;margin-top:5px;padding-right:20px;color:#999;font-size:15px;border:0;outline:none;background-color:#fff;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+.invoice-error{margin-bottom:0px;}
+.invoice-text03,.certificate-num{width:100%;height:30px;margin-top:5px;padding-right:20px;color:#999;font-size:15px;border:0;outline:none;background-color:#fff;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+
+.w38{width:38%;}
+.delbtn-style{height:40px;line-height:40px;margin-bottom:30px;text-align:center;border:1px solid #dedede;color:#333;font-size:16px;font-weight:bold;border-radius:3px;background-color:#fff;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+.w60{width:60%;}
+.certificate{position:absolute;z-index:20;line-height:40px;color:#333;font-weight:bold;font-size:15px;}
+.arrow-d{position:absolute;top:16px;right:10px;display:block;width:17px;height:9px;background:url(../../images/arrow_d.png) no-repeat;background-size:17px 9px;}
+.sel-certificate{display:block;z-index:10;position:absolute;left:0;top:0;width:100%;height:100%;line-height:40px;border:0;opacity:0;}
+.remove-icon{position:absolute;top:9px;right:10px;width:22px;height:22px;background:url(../../images/fork.gif) center no-repeat;background-size:22px;}
+
+.read{z-index:10000002;display:none;width:80%;overflow:hidden;background-color:#fff;border-radius:3px;}
+.read-tips{width:100%;line-height:50px;font-size:14px;text-align:center;border-bottom:1px solid #e8e8e8;}
+.read-btn{text-align:center;}
+.read-btn a{display:inline-block;text-align:center;margin:15px 8px;}
+.read-btn .no{width:35%;background-color:#ffffff;color:#666;line-height:33px;border-radius:3px;border:1px solid #ededed; }
+.read-btn .yes{width:35%;background-color:#f36303;color:#fff;line-height:35px;border-radius:3px;}
+
