--- a/InvoiceJS/MobInvoice/invoiceself/css/invoice.css
+++ b/InvoiceJS/MobInvoice/invoiceself/css/invoice.css
@@ -101,6 +101,7 @@ em.icon03{background-image:url(../../images/icon03.png);}
 .mt113px{margin-top:113px;}
 .mt30px{margin-top:30px;}
 .ml10px{margin-left:10px;}
+.ml30px{margin-left: 30px}
 .mr10px{margin-right:10px;}
 .mb5px{margin-bottom:5px;}
 .mb60px{margin-bottom:60px;}
